# service/userservice.go
@@ -2,18 +2,84 @@ package service
 
 import (
 	"chatgpt/models"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
 
 // GetUserList
-// @Tags userservice
-// @Success 200 {string} userList
+// @Summary 所有用户
+// @Tags 用户模块
+// @Success 200 {string} json{code,"message"}
 // @Router /user/getUserList [get]
 func GetUserList(c *gin.Context) {
 	data := make([]*models.UserBasic, 10)
 	data = models.GetUserList()
 	c.JSON(200, gin.H{
 		"message": data,
+	})
+}
+
+// CreateUser
+// @Summary 添加用户
+// @Tags 用户模块
+// @param name query string false "用户名"
+// @param password query string false "密码"
+// @param rePassword query string false "确认密码"
+// @Success 200 {string} json{code,"message"}
+// @Router /user/createUser [get]
+func CreateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	user.Name = c.Query("name")
+	user.Password = c.Query("password")
+	rePassword := c.Query("rePassword")
+	if user.Password != rePassword {
+		c.JSON(-1, gin.H{
+			"message": "两次密码不一致",
+		})
+		return
+	}
+
+	models.CreateUser(user)
+	c.JSON(200, gin.H{
+		"message": "添加用户成功",
+	})
+}
+
+// DeleteUser
+// @Summary 删除用户
+// @Tags 用户模块
+// @param id query string false "用户id"
+// @Success 200 {string} json{code,"message"}
+// @Router /user/deleteUser [get]
+func DeleteUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.Query("id"))
+	user.ID = uint(id)
+
+	models.DeleteUser(user)
+	c.JSON(200, gin.H{
+		"message": "删除用户成功",
+	})
+}
+
+// UpdateUser
+// @Summary 修改用户
+// @Tags 用户模块
+// @param id formData string false "用户id"
+// @param name formData string false "用户名"
+// @param password formData string false "密码"
+// @Success 200 {string} json{code,"message"}
+// @Router /user/updateUser [post]
+func UpdateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.PostForm("id"))
+	user.ID = uint(id)
+	user.Name = c.PostForm("name")
+	user.Password = c.PostForm("password")
+
+	models.UpdateUser(user)
+	c.JSON(200, gin.H{
+		"message": "修改用户成功",
 	})
 }
